# hpc-utils

./: .cpush.json5  .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: hpc-utils-config.cmake
include/hpc-utils/: say_hello.hpp
include/hpc_utils/: allocator.hpp  arrow_utils.hpp  containers.hpp  hdf5_utils.hpp  panic.hpp  rng_utils.hpp  static_array.hpp
src/: allocator.cpp  say_hello.cpp
test/: hello.cpp
